--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -179,14 +179,14 @@ code {
   display: grid;
   padding: 8px 16px;
   color: white;
-  text-decoration: wavy;
+  text-decoration: none;
   background-color: rgb(92, 9, 9);
   border: #111111;
   transition: background-color 0.5s ease, 0.5s ease;
 }
 .nav-centered a:hover {
-  background-color: rgb(92, 9, 9);
-  color: white;
+  background-color: white;
+  color: rgb(92, 9, 9);
 }
 
 .nav-centered+main {
