--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -170,7 +170,7 @@ code {
 .nav-centered ul {
   list-style: none;
   margin: 0;
-  padding: 250px;
+  padding: 0;
 }
 .nav-centered li {
   margin-bottom: 8px;
