--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -176,7 +176,7 @@ code {
   margin-bottom: 16px;
 }
 .nav-centered a {
-  display: block;
+  display: flex;
   padding: 8px 16px;
   color: white;
   text-decoration: none;
