--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -176,7 +176,7 @@ code {
   margin-bottom: 16px;
 }
 .nav-centered a {
-  display: content;
+  display: inline-block;
   padding: 10px 20px;
   color: white;
   text-decoration: none;
