--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -66,8 +66,8 @@ a:hover {
 }
 
 code {
-  font-family: monospace;
-  background-color: #f5f5f5;
+  font-family: cursive;
+  background-color: #155472;
   padding: 2px 6px;
   border: 1px solid rgba(0, 0, 0, 0.25);
 }
@@ -176,8 +176,8 @@ code {
   margin-bottom: 16px;
 }
 .nav-centered a {
-  display: inline-block;
-  padding: 10px 20px;
+  display: block;
+  padding: 8px 16px;
   color: white;
   text-decoration: none;
   background-color: rgb(92, 9, 9);
