--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -5,11 +5,11 @@
 }
 
 body {
-  font-family: "Times New Roman", serif;
+  font-family: "cursive", fantasy;
   font-size: 16px;
   line-height: 2;
-  color: #111111;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: #155472;
   display: flex;
   justify-content: center;
   align-items: flex-start;
