--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  font-family: "fantasy";
+  font-family: "fantasy", cursive;
   font-size: 16px;
-  line-height: 2;
+  line-height: 3;
   color: #ffffff;
   background-color: #155472;
   display: flex;
