--- a/week-06-exercise-01/css/style.css
+++ b/week-06-exercise-01/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "URW Chancery L", cursive;
+  font-family: "Blippo", fantasy;
   font-size: 16px;
   line-height: 3;
   color: #ffffff;
