--- a/project 01/style.css
+++ b/project 01/style.css
@@ -1,8 +1,19 @@
+* {
+    box-sizing: border-box;
+}
+
+html,
 body {
     font-family: Arial;
-    line-height: 10;
+    line-height: 5;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     padding: 32px 0;
+}
+
+main {
+    max-width: 1200px;
+    width: 90%;
+    padding: 16px;
 }
