--- a/project 01/style.css
+++ b/project 01/style.css
@@ -22,3 +22,12 @@ header {
     align-items: center;
 
 }
+
+h1 {
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 1em;
+    margin-top: 48px;
+    margin-bottom: 48px;
+    text-align: center;
+}
