--- a/project 01/style.css
+++ b/project 01/style.css
@@ -24,6 +24,7 @@ header {
 }
 
 h1 {
+    font-family: 'Courier New', Courier, monospace;
     font-weight: normal;
     font-size: 48px;
     line-height: 1em;
