--- a/project 01/style.css
+++ b/project 01/style.css
@@ -4,13 +4,16 @@
 
 html,
 body {
-    font-family: fantasy;
-    line-height: 5;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 32px 0;
-}
+  font-family: "Blippo", fantasy;
+  font-size: 16px;
+  line-height: 3;
+  color: #ffffff;
+  background-color: #155472;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
+  padding: 32px 0;
 
 main {
     max-width: 1200px;
