--- a/project 01/style.css
+++ b/project 01/style.css
@@ -4,6 +4,20 @@
 
 html,
 body {
+ font-family: system-ui;
+  font-size: 16px;
+  line-height: 3;
+  color: #ffffff;
+  background-color: #155472;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
+  padding: 32px 0;
+
+}
+
+main {
   font-family: system-ui;
   font-size: 16px;
   line-height: 3;
@@ -14,12 +28,6 @@ body {
   align-items: flex-start;
   min-height: 100vh;
   padding: 32px 0;
-}
-
-main {
-    max-width: 1200px;
-    width: 90%;
-    padding: 16px;
 }
 
 header {
