--- a/project 01/style.css
+++ b/project 01/style.css
@@ -18,16 +18,9 @@ body {
 }
 
 main {
-  font-family: system-ui;
-  font-size: 16px;
-  line-height: 3;
-  color: #ffffff;
-  background-color: #155472;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  min-height: 100vh;
-  padding: 32px 0;
+    max-width: 1200px;
+    width: 90%;
+    padding: 16px;
 }
 
 header {
