--- a/project 01/style.css
+++ b/project 01/style.css
@@ -37,7 +37,7 @@ h1 {
     text-align: center;
 }
 
-.style-card {
+.skill-card {
     background-color: antiquewhite;
     border: 1px dotted rgb(189, 55, 133);
 }
