--- a/project 01/style.css
+++ b/project 01/style.css
@@ -42,9 +42,21 @@ h1 {
     border: 1px dotted rgb(189, 55, 133);
 }
 
-.horizontal {
+.horizontal ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex
+    gap: 32px;
+}
+
+.horizontal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #333333;
+  padding: 0 32px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 }
