--- a/project 01/style.css
+++ b/project 01/style.css
@@ -71,5 +71,8 @@ h1 {
     color: black;
     text-decoration: wavy;
     transition: color 0.3s ease;
+}
 
+.horizontal a :hover {
+    color: rgb(54, 0, 99);
 }
