--- a/project 01/style.css
+++ b/project 01/style.css
@@ -70,11 +70,12 @@ h1 {
     padding: 20px 0;
     color: black;
     text-decoration: wavy;
-    transition: color 0.3s ease;
+    transition: background-color color 0.3s ease, 0.3 ease;
 }
 
 .horizontal a:hover {
     color: rgb(54, 0, 99);
+    background-color: #915a8e;
 }
 
 .horizontal+main {
