--- a/project 01/style.css
+++ b/project 01/style.css
@@ -70,6 +70,7 @@ h1 {
     padding: 10px 8px;
     color: black;
     text-decoration: none;
+    border: #e4bee2;
     transition: background-color 0.7s ease, 0.7 ease;
 }
 
