--- a/project 01/style.css
+++ b/project 01/style.css
@@ -55,7 +55,7 @@ h1 {
     top: 10px;
     left: 10px;
     right: 10px;
-    background-color: rgb(245, 237, 227);
+    width: fit-content;
     box-shadow: 0 2px 4px rgba(205, 17, 252, 0.39);
     z-index: 1500;
 }
@@ -68,8 +68,9 @@ h1 {
     display: block;
     padding: 10px 8px;
     color: black;
+    background-color: rgb(245, 237, 227);
     text-decoration: none;
-    border: #e4bee2;
+    border: 1px solid #e4bee2;
     transition: background-color 0.2s ease, 0.2 ease;
 }
 
