--- a/project 01/style.css
+++ b/project 01/style.css
@@ -46,8 +46,8 @@ h1 {
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex
-    gap: 32px;
+    display: flex;
+    gap: 10px 20px;
 }
 
 .horizontal {
