--- a/project 01/style.css
+++ b/project 01/style.css
@@ -51,8 +51,8 @@ h1 {
 }
 
 .horizontal {
-    position: static;
-    top: 3px;
+    position: sticky;
+    top: 20px;
     left: 3px;
     right: 3px;
     width: fit-content;
