--- a/project 01/style.css
+++ b/project 01/style.css
@@ -40,6 +40,7 @@ h1 {
 .skill-card {
     background-color: rgb(245, 237, 227);
     border: 1px dotted rgb(189, 55, 133);
+    box-shadow: #b905e6;
 }
 
 .horizontal ul {
