--- a/project 01/style.css
+++ b/project 01/style.css
@@ -25,8 +25,8 @@ main {
 
 header {
     align-items: center;
-    background-color: (245, 237, 227);
-    border: 10px dotted ( 189, 55, 133);
+    font-size: x-large;
+    font-weight: bolder;
 }
 
 h1 {
