--- a/project 01/style.css
+++ b/project 01/style.css
@@ -25,8 +25,12 @@ main {
 
 header {
     align-items: center;
-    font-size: smaller;
     font-weight: bolder;
+}
+
+.name-card {
+    background-color: rgb(245, 237, 227);
+    border: 10px dotted rgb(189, 55, 133)
 }
 
 h1 {
