--- a/project 01/style.css
+++ b/project 01/style.css
@@ -9,11 +9,11 @@ body {
   line-height: 3;
   color: #020202;
   background-color: #e4bee2;
-  display: flexbox;
+  display: grid;
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
-  padding: 32px 0;
+  padding: 20px 70px 50px;
 
 }
 
