--- a/project 01/style.css
+++ b/project 01/style.css
@@ -35,7 +35,7 @@ header {
 h1 {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
-    font-size: 48px;
+    font-size: x-large;
     line-height: 1em;
     margin-top: 48px;
     margin-bottom: 48px;
@@ -44,14 +44,14 @@ h1 {
 
 h2 {
     font-family: 'Courier New', Courier, monospace;
-    font-weight: normal;
+    font-weight: large;
     font-size: medium;
 }
 
 p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: lighter;
-    font-size: small;
+    font-size: medium;
     line-height: 32px;
 }
 
