--- a/project 01/style.css
+++ b/project 01/style.css
@@ -64,7 +64,7 @@ p {
     list-style: none;
     margin: 0;
     padding: 0;
-    display: block;
+    display: flex;
     gap: 10px 20px;
 }
 
@@ -75,7 +75,7 @@ p {
     right: 3px;
     width: fit-content;
     box-shadow: 0 2px 4px rgba(205, 17, 252, 0.39);
-    z-index: 1500;
+    z-index: 5;
 }
 
 .horizontal li {
