--- a/project 01/style.css
+++ b/project 01/style.css
@@ -85,7 +85,7 @@ p {
 
 .horizontal a {
     display: block;
-    padding: 20px 0x;
+    padding: 10px 0px;
     color: black;
     background-color: rgb(245, 237, 227);
     text-decoration: none;
