--- a/project 01/style.css
+++ b/project 01/style.css
@@ -105,7 +105,7 @@ p {
 .project-grid {
    margin: 48px 0;
    display: flex;
-   justify-content: space-around;
+   justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: wrap;
@@ -113,8 +113,8 @@ p {
 }
 
 .project-card {
-    border: 1px solid rgba(0, 0, 0, 0.25);
-    background-color: #f19cc4;
+    border: 1px dotted rgba(0, 0, 0, 0.25);
+    background-color: #e4bee2;
     padding: 16px;
     width: 500px; 
     display: flex
