--- a/project 01/style.css
+++ b/project 01/style.css
@@ -114,7 +114,8 @@ p {
 
 .project-card {
     border: 1px dotted rgba(0, 0, 0, 0.25);
-    background-color: #e4bee2;
+    background-color: rgb(245, 237, 227);
+;
     padding: 16px;
     width: 500px; 
     display: flex
