--- a/project-02/style.css
+++ b/project-02/style.css
@@ -1,5 +1,15 @@
-body {
-
+body { 
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    line-height: 45px;
+    color: #020202;
+    background-color: #f1def1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 150px;
+    padding: 20px 70px 50px;
+    margin: 20px;
 }
 
 .middle {
