--- a/project-02/style.css
+++ b/project-02/style.css
@@ -4,7 +4,7 @@ body {
     line-height: 35px;
     color: #020202;
     background-color: #f1def1;
-    display: inline-flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     min-height: 150px;
