--- a/project-02/style.css
+++ b/project-02/style.css
@@ -32,6 +32,24 @@ body {
     color: rgb(109, 24, 24);
 }
 
+button {
+    background-color: #b41f4c;
+    border: none;  
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition-duration: 0.3s;
+}
+
+button:hover {
+ background-color: #c71592;
+  color: white;
+}
+
 
 @media (width >= 480px) { 
     body{
