--- a/project-02/style.css
+++ b/project-02/style.css
@@ -50,6 +50,12 @@ button:hover {
   color: white;
 }
 
+li {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgb(78, 13, 13)
+}
 
 @media (width >= 480px) { 
     body{
