--- a/project-02/style.css
+++ b/project-02/style.css
@@ -1,12 +1,12 @@
 body { 
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 15px;
-    line-height: 35px;
+    font-size: 20px;
+    line-height: 40px;
     color: #020202;
     background-color: #f1def1;
     display: grid;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: end;
     min-height: 150px;
     padding: 20px 70px 50px;
     margin: 20px;
@@ -40,7 +40,7 @@ button {
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 8px 2px;
     opacity: 0.6;
     transition-duration: 0.3s;
 }
@@ -54,7 +54,21 @@ li {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
     line-height: 30px;
-    color: rgb(78, 13, 13)
+    color: rgb(78, 13, 13)c
+}
+
+h1 {
+    font-weight: 1000;
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+img {
+    display: block;
+    margin: auto;
 }
 
 @media (width >= 480px) { 
