update index style
changed font family

--- a/project-02/style.css
+++ b/project-02/style.css
@@ -58,11 +58,13 @@ li {
 }
 
 h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 1000;
     text-align: center;
 }
 
-h2 {
+h2 {    
+    font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 }
 
