--- a/project 01/style.css
+++ b/project 01/style.css
@@ -6,7 +6,7 @@ html,
 body {
  font-family: system-ui;
   font-size: 16px;
-  line-height: 3;
+  line-height: 6;
   color: #020202;
   background-color: #e4bee2;
   display: grid;
@@ -34,8 +34,8 @@ header {
 
 h1 {
     font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    font-size: 50px;
+    font-weight: 1000;
+    font-size: 60px;
     line-height: 1em;
     margin-top: 48px;
     margin-bottom: 48px;
@@ -44,14 +44,14 @@ h1 {
 
 h2 {
     font-family: 'Courier New', Courier, monospace;
-    font-weight: large;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 30px;
 }
 
 p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: lighter;
-    font-size: medium;
+    font-weight: 400;
+    font-size: 20px;
     line-height: 32px;
 }
 
