--- a/project 01/style.css
+++ b/project 01/style.css
@@ -90,7 +90,7 @@ p {
     background-color: rgb(245, 237, 227);
     text-decoration: none;
     border: 1px solid #e4bee2;
-    transition: background-color 0.2s ease, 0.2 ease;
+    transition: background-color 0.4s ease, 0.4s ease;
 }
 
 .horizontal a:hover {
